Begin frontend work

--- a/web/index.html
+++ b/web/index.html
@@ -2,5 +2,18 @@
 <html>
     <head>
         <title>firetdev: ColorNamer</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
+    <body>
+        <h1>ColorNamer</h1>
+        <h3><i>AI-based program to recognize colors</i></h3>
+        Enter RGB value:
+        <input type="textline" id="colorInput" value="rgb(255, 0, 0)">
+        <div id="button">Name color</div>
+        <div id="output">
+            <h3><i>Your color is....</i></h3>
+            <h2>Red!</h2>
+        </div>
+        <script src="main.js"></script>
+    </body>
 </html>
