--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,7 @@
         <h3><i>AI-based program to recognize colors</i></h3>
         Enter RGB value:
         <input type="textline" id="colorInput" value="rgb(255, 0, 0)">
-        <div id="button">Name color</div>
+        <div id="button" onclick="main()">Name color</div>
         <div id="output">
             <h3><i>Your color is....</i></h3>
             <h2>Red!</h2>
