--- a/web/index.html
+++ b/web/index.html
@@ -12,7 +12,7 @@
         <div id="button" onclick="main()">Name color</div>
         <div id="output">
             <h3><i>Your color is....</i></h3>
-            <h2>Red!</h2>
+            <h2 id="clr">Red!</h2>
         </div>
         <script src="main.js"></script>
     </body>
